Update Comparison Logic

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,3 @@
 Add crab-v0.12.3-2, darwinia-v0.12.3-2, pangolin-v2.8.18, pangoro-v2.8.18 - 08/03/2022 09:04:52
+Add  - 08/04/2022 11:46:41
+Add  - 08/04/2022 11:48:17
