--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,2 @@
 Add crab-v0.12.3-2, darwinia-v0.12.3-2, pangolin-v2.8.18, pangoro-v2.8.18 - 08/03/2022 09:04:52
+Add pangolin-v2.8.19, pangoro-v2.8.19 - 08/05/2022 11:31:00
