Apply Automatic Changes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,3 +2,4 @@ Add crab-v0.12.3-2, darwinia-v0.12.3-2, pangolin-v2.8.18, pangoro-v2.8.18 - 08/0
 Add pangolin-v2.8.19, pangoro-v2.8.19 - 08/05/2022 11:31:00
 Add pangolin-v2.9.0, pangoro-v2.9.0 - 08/14/2022 18:36:35
 Add pangolin-v2.9.1, pangoro-v2.9.1 - 08/17/2022 14:02:15
+Add pangolin-v2.9.2, pangoro-v2.9.2 - 08/19/2022 07:32:28
