--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,3 +3,4 @@ Add pangolin-v2.8.19, pangoro-v2.8.19 - 08/05/2022 11:31:00
 Add pangolin-v2.9.0, pangoro-v2.9.0 - 08/14/2022 18:36:35
 Add pangolin-v2.9.1, pangoro-v2.9.1 - 08/17/2022 14:02:15
 Add pangolin-v2.9.2, pangoro-v2.9.2 - 08/19/2022 07:32:28
+Add pangolin-v2.9.3, pangoro-v2.9.3 - 08/31/2022 06:44:55
