Apply Automatic Changes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,3 +4,4 @@ Add pangolin-v2.9.0, pangoro-v2.9.0 - 08/14/2022 18:36:35
 Add pangolin-v2.9.1, pangoro-v2.9.1 - 08/17/2022 14:02:15
 Add pangolin-v2.9.2, pangoro-v2.9.2 - 08/19/2022 07:32:28
 Add pangolin-v2.9.3, pangoro-v2.9.3 - 08/31/2022 06:44:55
+Add crab-v0.12.4, darwinia-v0.12.4 - 09/01/2022 06:06:50
