--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,3 +6,4 @@ Add pangolin-v2.9.2, pangoro-v2.9.2 - 08/19/2022 07:32:28
 Add pangolin-v2.9.3, pangoro-v2.9.3 - 08/31/2022 06:44:55
 Add crab-v0.12.4, darwinia-v0.12.4 - 09/01/2022 06:06:50
 Add crab-v0.12.4-1, darwinia-v0.12.4-1 - 09/06/2022 06:37:31
+Add pangolin-v2.9.4, pangoro-v2.9.4 - 09/07/2022 04:45:55
