--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,3 +8,4 @@ Add crab-v0.12.4, darwinia-v0.12.4 - 09/01/2022 06:06:50
 Add crab-v0.12.4-1, darwinia-v0.12.4-1 - 09/06/2022 06:37:31
 Add pangolin-v2.9.4, pangoro-v2.9.4 - 09/07/2022 04:45:55
 Add pangolin-v2.9.4-1, pangoro-v2.9.4-1 - 09/07/2022 06:31:31
+Add pangolin-v2.9.4-1-reset-sync-from, pangoro-v2.9.4-1-reset-sync-from - 09/08/2022 04:26:09
